# Tiny2DEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Engine/: Tiny2DEngine.cpp  Tiny2DEngine.h  tiny2d_engine.cc  tiny2d_engine.h  tiny2d_engine_test.cc
Sandbox/: incline_spring_simulation.cc  main.cc  main.cpp  rotation_pendulum_simulation.cc  rotation_pendulum_test.cc  simulation_model_test.cc  simulations.h
